objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>